--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>eureka-service</module>
         <module>eureka-client</module>
         <module>zuul-service</module>
+        <module>user-service</module>
     </modules>
 
     <properties>
@@ -30,6 +31,7 @@
         <lombok.version>1.18.4</lombok.version>
         <spring-boot.version>2.1.6.RELEASE</spring-boot.version>
         <spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
+        <apollo-client.version>1.5.0</apollo-client.version>
     </properties>
 
 <!--    <dependencies>-->
@@ -53,13 +55,19 @@
 <!--                <type>pom</type>-->
 <!--                <scope>import</scope>-->
 <!--            </dependency>-->
-
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
                 <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+
+            <!-- https://mvnrepository.com/artifact/com.ctrip.framework.apollo/apollo-client -->
+            <dependency>
+                <groupId>com.ctrip.framework.apollo</groupId>
+                <artifactId>apollo-client</artifactId>
+                <version>${apollo-client.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
