--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,8 @@
         <module>eureka-client</module>
         <module>zuul-service</module>
         <module>user-service</module>
+        <module>authorization-service</module>
+        <module>gateway-service</module>
     </modules>
 
     <properties>
